objects/TestReleaseCutomOBJ__c.object
<CustomObject>
    <fields>
        <fullName>AccField1__c</fullName>
        <label>AccField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>T56__c</fullName>
        <label>T56</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestField3__c</fullName>
        <label>TestField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestField4__c</fullName>
        <label>TestField4</label>
        <type>Email</type>
    </fields>
    <label>TestReleaseCutomOBJ</label>
    <nameField>
        <label>TestReleaseCutomOBJ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestReleaseCutomOBJs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>